@@ -3,6 +3,7 @@ release 1.1
 网关共通：
 - 查询服务和查询实例接口优化
 - 实例健康状态查询接口
+- 增加gateway的http10字段支持
 
 
 严选网关:
@@ -16,6 +17,7 @@ release 1.1
 - 支持header、query匹配
 - 路由规则排序
 - virtual service拆分,一个api一个vs
+- 接口暴露subset
 
 
 ServiceMesh:
